[tool.poetry]
name = "pyzeebe"
version = "4.0.0rc4"
description = "Zeebe client api"
authors = ["Jonatan Martens <jonatanmartenstav@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/camunda-community-hub/pyzeebe"
repository = "https://github.com/camunda-community-hub/pyzeebe"
documentation = "https://pyzeebe.readthedocs.io/en/latest"
keywords = ["zeebe", "workflow", "workflow-engine"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "pyzeebe" },
]

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.1.0"
requests-oauthlib = ">=1.3.0,<3.0.0"
aiofiles = ">=0.7,<25"
# zeebe-grpc = "^8.4.0"
grpcio = ">=1.66.0"
grpcio-tools = ">=1.66.0"
protobuf = ">=5.27.2,<5.28.0"
typing-extensions = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
pytest-asyncio = "^0.21.1"
pytest-grpc = "^0.8.0"
pytest-mock = "^3.11.1"
pylint = ">=2.17.5,<4.0.0"
black = "^24.0.0"
mypy = "^1.10.0"
coveralls = "^3.3.1"
responses = ">=0.23.2,<0.26.0"
bump2version = "^1.0.1"
sphinx-rtd-theme = ">=1.2.2,<3.0.0"
sphinx = ">=6,<8"
importlib-metadata = ">=6.8,<9.0"

[tool.poetry.group.stubs.dependencies]
types-aiofiles = ">=0.7,<25"
types-oauthlib = "^3.1.0"
types-requests-oauthlib = ">=1.3.0,<3.0.0"
types-protobuf = "*"

[tool.mypy]
python_version = "3.8"
packages = ["pyzeebe"]
strict = true

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pyzeebe.proto.*"
]
disallow_untyped_defs = false
disable_error_code = ["type-arg", "import-untyped"]

[tool.pylint.master]
max-line-length = 120
disable = ["C0114", "C0115", "C0116"]

[tool.black]
line-length = 120
extend-exclude = '''
(
  .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
  | .*_pb2_grpc.py
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["*_pb2.py", "*_pb2_grpc.py", "*.pyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
