[project]
name = "pyzeebe"
version = "4.7.0"
description = "Zeebe client api"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jonatan Martens", email = "jonatanmartenstav@gmail.com" }]
maintainers = [{ name = "Dmitriy", email = "dimastbk@proton.me" }]
keywords = ["zeebe", "workflow", "workflow-engine"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anyio>=4.6.0",
    "grpcio>=1.66",
    "grpcio-health-checking>=1.66",
    "protobuf>=5.28,<7.0",
    "oauthlib>=3.1.0",
    "requests-oauthlib>=1.3.0,<3.0.0",
    "typing-extensions>=4.11.0",
]

[project.urls]
homepage = "https://github.com/camunda-community-hub/pyzeebe"
repository = "https://github.com/camunda-community-hub/pyzeebe"
documentation = "https://camunda-community-hub.github.io/pyzeebe/"

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-grpc>=0.8.0",
    "pytest-mock>=3.11.1",
    "pylint>=2.17.5,<4.0.0",
    "black>=25.0.0",
    "mypy>=1.10.0",
    "coveralls>=3.3.1",
    "responses>=0.23.2,<0.26.0",
    "sphinx-rtd-theme>=3.0.0,<3.1.0",
    "sphinx>=6,<8",
    "testcontainers>=4.13.0",
]
stubs = [
    "types-oauthlib>=3.1.0",
    "types-requests-oauthlib>=1.3.0,<3.0.0",
    "types-protobuf>=5.29.1.20241207,<7.0.0.0",
]

[tool.uv]
default-groups = ["dev", "stubs"]

[tool.mypy]
python_version = "3.9"
packages = ["pyzeebe"]
strict = true

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grpc_health.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyzeebe.proto.*"
disable_error_code = ["import-untyped", "unused-ignore"] # "type-arg"

[tool.pylint.master]
max-line-length = 120
disable = ["C0114", "C0115", "C0116"]

[tool.black]
line-length = 120
extend-exclude = '''
(
  .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
  | .*_pb2_grpc.py
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["*_pb2.py", "*_pb2_grpc.py", "*.pyi"]

[tool.pytest.ini_options]
markers = ["e2e: end to end tests"]

[tool.coverage.run]
omit = ["pyzeebe/proto/*"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "TID",   # flake8-tidy-imports
    "T20",   # flake8-print
    "ASYNC", # flake8-async
    "FA",    # flake8-future-annotations
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"update_proto.py" = ["T201"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
